Fixed the Process calls in the application read from the IO Buffer. Not doing this was causing Timeouts to occur when running JShrink on some projects due to the buffer running out of space.